tests/NormalTests/paczka1/small_fuzzy/52016601.err
Error in line 1: KdTL9 A515 87,1
Error in line 4: KdTL9 A872 93,3
Error in line 11: KdTL9 S700 64,8
Error in line 10: jGYSwzYjPQw S700 85,9
